# aiida-grouppathx

./: .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  publish-on-pypi.yml
aiida_grouppathx/: __init__.py  cli.py  launch_manager.py  pathx.py
docs/source/: conf.py  index.rst
docs/source/developer_guide/: index.rst
docs/source/user_guide/: get_started.rst
examples/: example_01.py
tests/: __init__.py  conftest.py  test_group_path.py
